<resources>
    <string name="app_name">玩安卓</string>
    <string name="my_jifen">我的积分</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_share">我的分享</string>
    <string name="setting">设置</string>
    <string name="nav_to_do">待办清单</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home">首页</string>
    <string name="tab_square">广场</string>
    <string name="tab_official_account">公众号</string>
    <string name="tab_knowledge_map">体系</string>
    <string name="tab_project">项目</string>
    <string name="login">登录</string>
    <string name="go_to_login">点击登录</string>
    <string name="password_input_hint">请输入密码</string>
    <string name="phone_input_hint">请输入用户名</string>
</resources>
