<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_tab1"
        android:enabled="true"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/item_tab2"
        android:enabled="true"
        android:icon="@drawable/ic_tab_square"
        android:title="@string/tab_square" />
    <item
        android:id="@+id/item_tab3"
        android:enabled="true"
        android:icon="@drawable/ic_tab_wechat"
        android:title="@string/tab_official_account" />

    <item
        android:id="@+id/item_tab4"
        android:enabled="true"
        android:icon="@drawable/ic_tab_system"
        android:title="@string/tab_knowledge_map" />
    <item
        android:id="@+id/item_tab5"
        android:enabled="true"
        android:icon="@drawable/ic_tab_project"
        android:title="@string/tab_project" />
</menu>
